# typo-eq

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: config.rs  lib.rs  main.rs  util.rs
src/app/: cursor.rs  events.rs  icons.rs  mod.rs  render.rs  resources.rs  util.rs  word.rs
src/app/components/: animate.rs  mod.rs  word.rs
src/app/systems/: debug_exit.rs  debug_systems.rs  input.rs  load.rs  mod.rs  setup.rs  state_manager.rs
src/importer/: counter.rs  dictionary.rs  mod.rs
src/importer/parser/: base.rs  mod.rs  typo.rs  xdxf.rs
