[package]
name = "typo-eq"
description = "Typo-eq is a typing training app for other languages. All it needs is a dictionary for words and their translations."
license = "GPL-3.0"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/onelikeandidie/typo-eq"

[lib]
name = "typo_eq"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.25.0"
rand = "0.8.5"
crossterm = "0.25.0"
chrono = "0.4.22"